[package]
name = "screen"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
smithay = "0.6.0"
smithay-client-toolkit = "0.19.2"
wayland-client = "0.31.10"
wayland-protocols = "0.32.8"
wayland-server = "0.31.9"
x11rb = { version = "0.13.1", features = ["randr"] }
